<resources>
    <string name="app_name">where2meet</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">UvJIIvdunkGtVfUcfzx6UBAAdPtwhRagNvqQ7IVw</string>
    <string name="back4app_client_key">JMRkIwQPjjZrGoER328NM6aoYvko8WXpFJv9tv7b</string>
    <string name="invite_Sent_to_you">Invites sent to you</string>
    <string name="ComposeTextTo">To:</string>
    <string name="sent_invite_status">Sent Invite Status</string>
    <string name="Select_Time">Select Time</string>
    <string name="multiple_user_warning">Can\'t send to multiple people at once</string>
    <string name="saving_error_message">Error while saving</string>
    <string name="error_info">Error while getting information</string>
    <string name="saved_success">Saved successfully</string>
    <string name="visited">ViSITED</string>
    <string name="signup_success">Account Created, Login!</string>
    <string name="signup_failure">Failed! to create account</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="succes_login">Login Success</string>
    <string name="failure_login">Issue with login</string>
    <string name="chatbox_hint">I will be right there?</string>
    <string name="compose_title_hint">Title</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="btn_send">SEND</string>
    <string name="not_visited">Not Visited</string>
    <string name="friend_name_hint">friend name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">password</string>
    <string name="login_btn_hint">Login</string>
    <string name="option_message_text">Don\'t have an account ?</string>
    <string name="signup_text_">signup</string>
    <string name="email_hint">Email</string>
    <string name="re_enter_password_hint">re-enter password</string>
    <string name="signup_hint">signup</string>
    <string name="login_messsage_hint">Already have an account?</string>
    <string name="upcoming_events_text">Upcoming events</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="empty_chat_message">Chat cannot be empty</string>
    <string name="sending_failure">Message failed to send</string>
    <string name="current_user_chat_name">You</string>
    <string name="web_socket_url">wss://where2meetemmanuel.b4a.io</string>
    <string name="log_out_success">log out successful</string>
    <string name="item_clicked">item_clicked</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_date_message">Please pick a date</string>
    <string name="pending_status">Pending</string>
    <string name="rejected_status">Rejected</string>
    <string name="accepted_status">Accepted</string>
    <string name="similar_places_message">Similar places filter: activated</string>
    <string name="location_failure">Failed to get location</string>
    <string name="distance_in_km_message">Distance selected in Km</string>
    <string name="title_price">Price</string>
    <string name="title_categories">Categories</string>
    <string name="one_dollar_sign">$</string>
    <string name="two_dollar_signs">$$</string>
    <string name="three_dollar_signs">$$$</string>
    <string name="open_now">Open Now</string>
    <string name="sort_based_on">Sort based on</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="similar_visited_places">Similar Visited Places</string>
    <string name="similar_visited">Similar visited</string>
    <string name="distance_in_km">Distance in km</string>
    <string name="availability">Availability:</string>
    <string name="price_tag">Price tag</string>
    <string name="category">Category:</string>
    <string name="place_search_message">where do you want to go?</string>
    <string name="no_new_invites">No New Invites</string>
    <string name="park">Park</string>
    <string name="reviews">Reviews</string>
    <string name="title">Title</string>
    <string name="who_do_you_want_to_go_with">who do you want to go with?</string>
    <string name="invitestatus">Invite status</string>
    <string name="select_user">please select a user</string>
    <string name="enter_title">please enter a valid title</string>
    <string name="enter_date">please enter a valid date</string>
    <string name="enter_time">please enter a valid time</string>
    <string name="loaction_request_message">App requires location access to produce accuracy in search results</string>
    <string name="error_saving">Error while saving</string>
    <string name="select_distance_or_similar">please select your distance limits</string>
</resources>