<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    tools:context=".fragments.PlaceFilterDialog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_in_km"
            android:textSize="@dimen/average_text_Size">
        </TextView>
        <TextView
            android:id="@+id/tvSeekBarProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            tools:text="0">
        </TextView>
    </LinearLayout>
    <SeekBar
        android:id="@+id/sbDistanceInMiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10000"
        android:progress="30"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_categories">
            </TextView>
            <Spinner
                android:id="@+id/spinnerCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_price"
            android:textSize="@dimen/average_text_Size">
        </TextView>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_CheapPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_dollar_sign">
        </RadioButton>
        <RadioButton
            android:id="@+id/radio_ModeratePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_dollar_signs">
        </RadioButton>
        <RadioButton
            android:id="@+id/radio_PriceExpensive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_dollar_signs">
        </RadioButton>
    </RadioGroup>
    <CheckBox android:id="@+id/cbOpenNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_now" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_based_on">
            </TextView>
            <Spinner
                android:id="@+id/spinnerSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnClosePlacesDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel">
        </Button>
        <Button
            android:id="@+id/btnApplyPlacesFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply">
        </Button>
    </LinearLayout>
</LinearLayout>




