<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.SearchFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:foreground="?android:attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/imgBtnSearchBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_marginEnd="10dp"
                android:src="@android:drawable/ic_menu_search"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/etSearchBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/place_search_message"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:background="@android:color/transparent"
                android:layout_marginEnd="10dp"
                tools:text="Where do you want to go?" />

            <ImageButton
                android:id="@+id/imgBtnPlaceFilter"
                android:layout_width="wrap_content"
                android:background="@android:color/transparent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_filter_and_sort_24"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/cvDistanceInKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            android:visibility="gone"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_in_km">
                </TextView>
                <TextView
                    android:id="@+id/tvDistanceInKm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:text="some stuff would go here ">
                </TextView>
                <ImageButton
                    android:id="@+id/imgBtnDistanceInKm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_cancel_24">
                </ImageButton>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAvailability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            android:visibility="gone"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/availability">
                </TextView>
                <TextView
                    android:id="@+id/tvAvailability"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="some stuff would go here">
                </TextView>
                <ImageButton
                    android:id="@+id/imgBtnAvailability"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_cancel_24">
                </ImageButton>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSortSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            android:visibility="gone"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvSortSelection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="some stuff would go here ">
                </TextView>
                <ImageButton
                    android:id="@+id/imgBtnSortSelection"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_cancel_24">
                </ImageButton>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPriceTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            android:visibility="gone"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_tag">
                </TextView>
                <TextView
                    android:id="@+id/tvPriceTag"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="some stuff would go here ">
                </TextView>
                <ImageButton
                    android:id="@+id/imgBtnPriceTag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_cancel_24">
                </ImageButton>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            android:visibility="gone"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category">
                </TextView>
                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="some stuff would go here ">
                </TextView>
                <ImageButton
                    android:id="@+id/imgBtnCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_cancel_24">
                </ImageButton>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchItems"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingResultsAnimation"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_url="https://assets5.lottiefiles.com/packages/lf20_l9bcfk19.json"/>
</LinearLayout>